# coffee-roaster

./: .gitignore  ARTISAN.md  BOM.md  BUILD.md  README  README.md  agents.md  index.html  platformio.ini  run_tests.sh  setup_libraries.sh  site.css  site.js
3D printing/: 12V - Power Supply Mount.stl  Breakout Mount.stl  Cube.stl  Enclosure Bottom.stl  Enclosure Top.stl  Fan.stl  Feet.stl  Handle - Trim.stl  PCB Standoff.stl  Power Supply mount.stl  Roaster Enclosure.3mf
Artisan/: artisan-settings.aset
Nextion/: roaster1.tft
PCBs/: Roaster Control - Custom Parts.lbr  Roaster Control - Rev I.brd  Roaster Control - Rev I.dxf  Roaster Control - Rev I.sch  Roaster Control - Rev I.step
roast-profiles/: decaf-medium.json  ethiopian-espresso.json  ethiopian-light.json  ethiopian-medium.json  guatemalan-medium.json
roaster-firmware/: AUTOTUNER_RAMP_FIX.md  BoardConfig.hpp  DebugLog.hpp  DisplayAdapter.hpp  DisplayBackendConfig.hpp  DisplayTypes.hpp  JC4827W543C_PORT_PLAN.md  LICENSE  LvglDisplay.hpp  Network.hpp  PIDAutotuner.hpp  PIDRuntimeController.hpp  PIDValidation.hpp  ProfileEditor.hpp  ProfileManager.hpp  ProfileWebUI.hpp  Profiles.hpp  README.md  ROASTER_DISPLAY_REQUIREMENTS.md  StepResponseTuner.hpp  SystemLink.hpp  SystemLinkWebUI.hpp  Types.hpp  openapi.yaml  roaster-firmware.ino  run_tests.sh  setup_libraries.sh
roaster-firmware/simulator/: CMakeLists.txt  lv_conf.h  main.c
src/: roaster-daughter-card.cpp  roaster-daughter-card.ino
systemlink-notebooks/: csv-attachment-to-datatable-final.ipynb  csv-attachment-to-datatable-publish.ipynb  (+3 more)
(+68 files in other folders)
